# django-chat

./: .ebignore  .env.example  .gitignore  .pre-commit-config.yaml  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  Dockerfile  Procfile  README.md  coverage.xml  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  requirements.txt
.ebextensions/: 01_packages.config  02_python.config  03_nginx.config  04_alb.config  05_supervisor.config  06_create_superuser.config
.github/workflows/: ci.yml
accounts/: admin.py  models.py  serializers.py  template_views.py  urls.py  validators.py  views.py
accounts/management/commands/: create_initial_superuser.py
accounts/migrations/: 0001_initial.py
common/: views.py
conversations/: admin.py  models.py  serializers.py  template_views.py  urls.py  views.py
conversations/migrations/: 0001_initial.py
djangochat/: asgi.py  settings_backup.py  urls.py
djangochat/settings/: base.py  dev.py  prod.py  test.py
docker/: entrypoint.sh
messaging/: consumers.py  redis_stream.py  routing.py  throttle.py  urls.py  views.py
openchat/: asgi.py  settings_backup.py  urls.py  wsgi.py
openchat/settings/: base.py  dev.py  prod.py  test.py
scripts/: setup-aws.sh
templates/: base.html
templates/accounts/: login.html  signup.html
templates/conversations/: chat_room.html  list.html
tests/: test_auth.py  test_conversations.py  test_redis_stream.py  test_throttle.py
